# norris-jokes-api

./: Cargo.toml  README.md
src/: joke.rs  jokecategory.rs  lib.rs  norriserror.rs  request.rs  requestor.rs  requestor_async.rs
src/models/: joke.rs
