[package]
name = "norris-jokes"
version = "1.0.0"
edition = "2021"
description = "Chuck Norris jokes API sync & async fetcher library for Rust applications"
license = "GPL-3.0-or-later"
keywords = ["norris", "chuck", "api", "joke"]
categories = ["api-bindings"]
readme = "README.md"
authors = ["Skewnart"]
repository = "https://github.com/skewnart/norris-jokes-api" 
homepage = "https://github.com/skewnart/norris-jokes-api"

[dependencies]
reqwest = { version = "0.12.12", features = ["blocking"] }
json = "0.12.4"
serde = { version = "1.0.218", features = ["derive"] } 
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["full"] }